src/Base/main/default/objects/Experience_Evaluation_Report_Root_Cause__c/Experience_Evaluation_Report_Root_Cause__c.object-meta.xml
<CustomObject>
    <label>Experience Evaluation Report Root Cause</label>
    <nameField>
        <displayFormat>EER-Root Cause-{0000}</displayFormat>
        <label>Experience Evaluation Report Root Cause Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Experience Evaluation Report Root Causes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>