src/Base/main/default/objects/Experience_Evaluation_Report_Root_Cause__c/fields/Experience_Evaluation_Report__c.field-meta.xml
<CustomField>
    <fullName>Experience_Evaluation_Report__c</fullName>
    <label>Experience Evaluation Report</label>
    <referenceTo>Experience_Evaluation_Report__c</referenceTo>
    <relationshipLabel>Root Cause(s)</relationshipLabel>
    <relationshipName>Experience_Evaluation_Report_Root_Causes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>