src/Base/main/default/objects/Experience_Evaluation_Report_Root_Cause__c/fields/Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause__c</fullName>
    <label>Root Cause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product Database Errors</fullName>
            </value>
            <value>
                <fullName>Undefined Process</fullName>
            </value>
            <value>
                <fullName>No Follow Up</fullName>
            </value>
            <value>
                <fullName>Training Deficiencies</fullName>
            </value>
            <value>
                <fullName>Management Accountability</fullName>
            </value>
            <value>
                <fullName>Staff Accountability</fullName>
            </value>
            <value>
                <fullName>Lack of Staff.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>