src/Base/main/default/objects/Experience_Evaluation_Report_Root_Cause__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gap Identified</fullName>
            </value>
            <value>
                <fullName>Pending Resolutions</fullName>
            </value>
            <value>
                <fullName>Implementing Resolutions</fullName>
            </value>
            <value>
                <fullName>Monitoring Changes</fullName>
            </value>
            <value>
                <fullName>Final Review</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>